<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_4"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            android:titleTextAppearance="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />

        <LinearLayout
            android:id="@+id/viewA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@drawable/ribera"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/infocentro_nombre"
                android:textColor="#f8f8f8"
                android:textSize="28sp"
                android:gravity="bottom|end" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/viewB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            style="@style/AppTheme"
            android:background="@color/color_4"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infocentro_direccion"
                android:gravity="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infocentro_tlfno"
                android:gravity="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infocentro_fax"
                android:gravity="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infocentro_twitter"
                android:gravity="center"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infocentro_facebook"
                android:gravity="center"
                android:textSize="14sp"/>



            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:baselineAligned="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/infocentro_enseñanzas_title"
                    android:text="@string/ensenanzas_title"
                    android:gravity="center"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/infocentro_enseñanzas"
                    android:scrollbars="vertical"
                    android:maxLines="512"/>

            </LinearLayout>-->


        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom|end">


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_info_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="3dp"
            android:src="@drawable/icon_home"
            android:visibility="visible"
            android:onClick="onClick"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_info_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="3dp"
            android:src="@drawable/icon_mail"
            android:visibility="visible"
            android:onClick="onClick"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/boton_info_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_margin="3dp"
            android:src="@drawable/icon_twitter"
            android:visibility="visible"
            android:onClick="onClick"
            />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>